--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,63 +1,64 @@
-$breakpoints:(sm: 540px,
-    md: 768px,
-    xl: 1200px,
+$breakpoints: (
+  sm: 540px,
+  md: 768px,
+  xl: 1200px,
 );
 
 @mixin media-up($breakpoint) {
-    @media screen and (min-width: map-get($breakpoints, $breakpoint)) {
-        @content;
-    }
+  @media screen and (min-width: map-get($breakpoints, $breakpoint)) {
+    @content;
+  }
 }
 
 .home__container {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-    & .home__title-div {
-        & .home__title {
-            font-size: 2rem;
-            font-weight: bold;
-            color: #fff;
-            margin-bottom: 1rem;
+  & .home__title-div {
+    & .home__title {
+      font-size: 2rem;
+      font-weight: bold;
+      color: #fff;
+      margin-bottom: 1rem;
 
-            @include media-up(md) {
-                font-size: 2.5rem;
-            }
+      @include media-up(md) {
+        font-size: 2.5rem;
+      }
 
-            & .home__title-brain {
-                background-color: #fff;
-                color: #000213;
-                padding: .1rem .3rem;
-            }
+      & .home__title-brain {
+        background-color: #fff;
+        color: #000213;
+        padding: 0.1rem 0.3rem;
+      }
 
-            & .home__title-es {
-                font-size: 14px;
-            }
-        }
+      & .home__title-es {
+        font-size: 14px;
+      }
     }
+  }
 
-    & .home__button {
-        text-decoration: none;
+  & .home__button {
+    text-decoration: none;
 
-        & .home__button-container {
-            margin: .5rem;
-            width: 7em;
-            border: #ffffff solid 3px;
+    & .home__button-container {
+      margin: 0.5rem;
+      //width: 7em;
+      border: #ffffff solid 3px;
 
-            & .home__button-text {
-                font-size: 16px;
-                font-weight: 700;
-                margin: .3em .1em;
-                color: #ffffff;
+      & .home__button-text {
+        font-size: 16px;
+        font-weight: 700;
+        margin: 0.3em 0.1em;
+        color: #ffffff;
 
-                @include media-up(md) {
-                    margin: .5rem;
-                }
-            }
+        @include media-up(md) {
+          margin: 0.5rem;
         }
+      }
     }
+  }
 }
